# xnec2c-gao

./: .gitignore  CHANGELOG.md  README.md  cabal.project.local  metadata.yaml  report.html  xnec2c-gao.cabal
.github/workflows/: autotoc.yml  debian.yml  haskell.yml  pandoc.yml
app/: Display.hs  GAOParser.hs  Genetics.hs  Genotype.hs  Main.hs  OptFunc.hs  Options.hs  Output.hs  Phenotype.hs  Types.hs  Utils.hs
examples/2m-5e-yagi/: 2m-5e-yagi.gao
examples/2m_extended_yagi/: 2m_extended_yagi.gao  2m_extended_yagi.gao_1_[AVSVR:1.3445901].nec  2m_extended_yagi.gao_2_[AVSVR:1.3528574].nec  2m_extended_yagi.gao_3_[AVSVR:1.3537185].nec  2m_extended_yagi.gao_4_[AVSVR:1.3588531].nec  2m_extended_yagi.gao_5_[AVSVR:1.3588784].nec  2m_extended_yagi.gao_6_[AVSVR:1.3778197].nec  2m_extended_yagi.gao_7_[AVSVR:1.3797935].nec  2m_extended_yagi.nec  2m_extended_yagi.run.nec
examples/awx/: awx.gao  awx.gao_11_[AVSVR:8.060486].nec  awx.gao_1_[AVSVR:1.2078478].nec  awx.gao_1_[AVSVR:1.2710211].nec  awx.gao_1_[AVSVR:1.4819803].nec  awx.gao_1_[AVSVR:2.0488825].nec  awx.gao_1_[AVSVR:2.2601066].nec  awx.gao_1_[AVSVR:2.427617].nec  awx.gao_2_[AVSVR:1.2352113].nec  awx.gao_2_[AVSVR:1.2725341].nec  awx.gao_2_[AVSVR:1.2937396].nec  awx.gao_2_[AVSVR:2.0282588].nec  awx.gao_2_[AVSVR:2.1642385].nec  awx.gao_2_[AVSVR:2.652577].nec  awx.gao_2_[AVSVR:2.9234014].nec  awx.gao_3_[AVSVR:1.2743919].nec  awx.gao_3_[AVSVR:2.2733445].nec  awx.gao_3_[AVSVR:2.4860435].nec  awx.gao_3_[AVSVR:2.7364664].nec  awx.gao_3_[AVSVR:3.7239056].nec  awx.gao_4_[AVSVR:1.2757685].nec  awx.gao_4_[AVSVR:1.2948964].nec  awx.gao_4_[AVSVR:2.6248322].nec  awx.gao_4_[AVSVR:3.2404726].nec  awx.gao_4_[AVSVR:5.1131196].nec  awx.gao_4_[AVSVR:6.0284576].nec  awx.gao_5_[AVSVR:3.082522].nec  awx.gao_5_[AVSVR:3.3483233].nec  awx.gao_5_[AVSVR:4.4599576].nec  awx.gao_5_[AVSVR:6.8879175].nec  awx.gao_6_[AVSVR:1.2773862].nec  awx.gao_6_[AVSVR:1.2952983].nec  awx.gao_6_[AVSVR:1.3093462].nec  awx.gao_6_[AVSVR:3.4476595].nec  awx.gao_6_[AVSVR:4.4411182].nec  awx.gao_6_[AVSVR:6.7520356].nec  awx.gao_7_[AVSVR:1.2104595].nec  awx.gao_7_[AVSVR:1.2932155].nec  awx.gao_7_[AVSVR:3.2788856].nec  awx.gao_7_[AVSVR:5.9709573].nec  (+5 more)
examples/daniel/: doppeldipol.nec.gao
examples/dipole/: dipole.gao  dipole.gao_1_[AVSVR:1.3127153].nec  dipole.gao_1_[AVSVR:1.4089088].nec  dipole.gao_1_[AVSVR:161.56058].nec  dipole.gao_2_[AVSVR:1.3620993].nec  dipole.gao_2_[AVSVR:1.4320415].nec  dipole.gao_2_[AVSVR:127.76167].nec  dipole.gao_3_[AVSVR:1.363644].nec  dipole.gao_3_[AVSVR:1.4345628].nec  dipole.gao_3_[AVSVR:88.48767].nec  dipole.gao_4_[AVSVR:1.3614764].nec  dipole.gao_4_[AVSVR:1.4602132].nec  dipole.gao_4_[AVSVR:79.22903].nec  dipole.gao_5_[AVSVR:1.3644097].nec  dipole.gao_5_[AVSVR:1.4613905].nec  dipole.gao_5_[AVSVR:79.21403].nec  dipole.gao_6_[AVSVR:1.3744646].nec  dipole.gao_6_[AVSVR:1.4817294].nec  dipole.gao_6_[AVSVR:61.10406].nec  dipole.gao_7_[AVSVR:1.3747396].nec  dipole.gao_7_[AVSVR:1.4818653].nec  dipole.gao_7_[AVSVR:58.442852].nec  dipole.nec  dipole.nec.csv
examples/jpole/: jpole.gao  jpole.gao_1_[AVSVR:-1605.9717].nec  jpole.gao_2_[AVSVR:32.912758].nec  jpole.gao_3_[AVSVR:92.87394].nec  jpole.gao_4_[AVSVR:30.939863].nec  jpole.gao_5_[AVSVR:15.935977].nec  jpole.gao_6_[AVSVR:137.12506].nec  jpole.gao_7_[AVSVR:43.632122].nec  jpole.nec  jpole.nec.csv
examples/multibanddipole/: multibanddipole.gao  multibanddipole.gao_1_[AVSVR:53452.29].nec  multibanddipole.gao_1_[AVSVR:5862.7017].nec  multibanddipole.gao_1_[AVSVR:6.5530434].nec  multibanddipole.gao_1_[AVSVR:6.770421].nec  multibanddipole.gao_2_[AVSVR:51458.313].nec  multibanddipole.gao_2_[AVSVR:5767.2383].nec  multibanddipole.gao_2_[AVSVR:6.5558205].nec  multibanddipole.gao_2_[AVSVR:6.7736425].nec  multibanddipole.gao_3_[AVSVR:3107.2842].nec  multibanddipole.gao_3_[AVSVR:37860.535].nec  multibanddipole.gao_3_[AVSVR:6.556409].nec  multibanddipole.gao_3_[AVSVR:6.7841024].nec  multibanddipole.gao_4_[AVSVR:1128.9417].nec  multibanddipole.gao_4_[AVSVR:31824.943].nec  multibanddipole.gao_4_[AVSVR:6.5658493].nec  multibanddipole.gao_4_[AVSVR:6.78703].nec  multibanddipole.gao_5_[AVSVR:3069.0012].nec  multibanddipole.gao_5_[AVSVR:31971.223].nec  multibanddipole.gao_5_[AVSVR:6.5541344].nec  multibanddipole.gao_5_[AVSVR:6.7963686].nec  multibanddipole.gao_6_[AVSVR:115.51582].nec  multibanddipole.gao_6_[AVSVR:430.20618].nec  multibanddipole.gao_6_[AVSVR:6.8120866].nec  multibanddipole.gao_7_[AVSVR:114.29481].nec  multibanddipole.gao_7_[AVSVR:6.5698643].nec  multibanddipole.gao_7_[AVSVR:6.8148203].nec  multibanddipole.gao_7_[AVSVR:637.49445].nec
examples/satyagi2m70cm/: satyagi2m70cm.gao
examples/serialpole/: serialpole.gao  serialpole.nec  serialpole.nec.csv
examples/simpleyagi/: simple_yagi.gao  simple_yagi.gao_1_[AVSVR:1.0662388].nec  simple_yagi.gao_1_[AVSVR:1.1328181].nec  simple_yagi.gao_1_[AVSVR:1.8391805].nec  simple_yagi.gao_2_[AVSVR:1.0667865].nec  simple_yagi.gao_2_[AVSVR:1.0965903].nec  simple_yagi.gao_2_[AVSVR:1.1641457].nec  simple_yagi.gao_2_[AVSVR:1.7976905].nec  simple_yagi.gao_3_[AVSVR:1.0668945].nec  simple_yagi.gao_3_[AVSVR:1.0746629].nec  simple_yagi.gao_3_[AVSVR:1.1741196].nec  simple_yagi.gao_3_[AVSVR:1.4410657].nec  simple_yagi.gao_3_[AVSVR:1.8011684].nec  simple_yagi.gao_3_[AVSVR:12.072063].nec  simple_yagi.gao_4_[AVSVR:1.0669625].nec  simple_yagi.gao_4_[AVSVR:1.0747143].nec  simple_yagi.gao_4_[AVSVR:1.096416].nec  simple_yagi.gao_4_[AVSVR:1.1818683].nec  simple_yagi.gao_4_[AVSVR:1.6118225].nec  simple_yagi.gao_4_[AVSVR:1.6212624].nec  simple_yagi.gao_4_[AVSVR:5.7137547].nec  simple_yagi.gao_5_[AVSVR:1.0669532].nec  simple_yagi.gao_5_[AVSVR:1.0883031].nec  simple_yagi.gao_5_[AVSVR:1.143719].nec  simple_yagi.gao_5_[AVSVR:1.1617137].nec  simple_yagi.gao_5_[AVSVR:1.1833667].nec  simple_yagi.gao_5_[AVSVR:1.4806074].nec  simple_yagi.gao_5_[AVSVR:1.7242851].nec  simple_yagi.gao_6_[AVSVR:1.0670284].nec  simple_yagi.gao_6_[AVSVR:1.0684978].nec  simple_yagi.gao_6_[AVSVR:1.1874242].nec  simple_yagi.gao_6_[AVSVR:1.3725371].nec  simple_yagi.gao_6_[AVSVR:1.6099745].nec  simple_yagi.nec  (+6 more)
