cabal-version:      2.4
name:               xnec2c-gao
version:            0.2.0

-- A short (one-line) description of the package.
synopsis: g(enetic)a(lgorithm)o(ptimizer) - An external genetic optimizer for xnec2c

-- A longer description of the package.
description: After you embelished a nec file with SYMBOLS and GENETICSYMBOLS to a gao file,
             running the optimizer generates concrete nec models of genetic variants and runs
             xnec2c optimisation loop to calculate VSWR/GAIN as fittness to select survivors,
             applies genetic operations (mutation,crossover), adds random individuals, and reruns
             loop until you are satisfied with the results, then writes survivors to nec files for you to build.

maintainer: Maurizio Di Pietro DC1MDP
author: Maurizio Di Pietro DC1MDP

-- A URL where users can report bugs.
bug-reports: http://github.com/polyrod/xnec2c-gao/

-- The license under which the package is released.
license: BSD-3-Clause

-- A copyright notice.
copyright: Copyright 2022 Maurizio Di Pietro DC1MDP. Program is provided "as is". Author is
           not responsible for any havoc caused by the usage of this software. Use at own risk.


category: hamradio

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: "http://github.com/polyrod/xnec2c-gao/"

executable xnec2c-gao
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Types
                 , Utils
                 , Options
                 , GAOParser
                 , Genotype
                 , Phenotype
                 , Genetics
                 , OptFunc
                 , Display
                 , Output
                 , Paths_xnec2c_gao


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        bytestring,
        containers,
        filepath-bytestring,
        unix,
        hinotify,
        text,
        megaparsec,
        mtl,
        parser-combinators,
        scientific,
        monad-loops,
        monadlist,
        optparse-applicative,
        process,
        pretty-simple,
        random,
        these,
        directory,
        gitrev,
        AC-Angle,
        text-builder

    hs-source-dirs:   app
    default-language: Haskell2010

    GHC-Options: -threaded -Wincomplete-patterns -Wall
