cabal-version:      2.4
name:               xnec2c-gao
version:            0.3.2

-- A short (one-line) description of the package.
synopsis: g(enetic)a(lgorithm)o(ptimizer) - An external genetic optimizer for xnec2c

-- A longer description of the package.
description: After you embelished a nec file with SYMBOLS and GENETICSYMBOLS to a gao file,
             running the optimizer generates concrete nec models of genetic variants and runs
             xnec2c optimisation loop to calculate VSWR/GAIN as fittness to select survivors,
             applies genetic operations (mutation,crossover), adds random individuals, and reruns
             loop until you are satisfied with the results, then writes survivors to nec files for you to build.

maintainer: Maurizio Di Pietro DC1MDP
author: Maurizio Di Pietro DC1MDP

-- A URL where users can report bugs.
bug-reports: http://github.com/polyrod/xnec2c-gao/

-- The license under which the package is released.
license: BSD-3-Clause

-- A copyright notice.
copyright: Copyright 2022 Maurizio Di Pietro DC1MDP. Program is provided "as is". Author is
           not responsible for any havoc caused by the usage of this software. Use at own risk.


category: hamradio

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: "http://github.com/polyrod/xnec2c-gao/"

executable xnec2c-gao
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Types
                 , Utils
                 , Options
                 , GAOParser
                 , Genotype
                 , Phenotype
                 , Genetics
                 , OptFunc
                 , Display
                 , Output
                 , Paths_xnec2c_gao


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        AC-Angle >= 1.0 && < 1.1,
        base >= 4.20.0 && < 4.21,
        bytestring >= 0.12.1 && < 0.13,
        containers >= 0.7 && < 0.8,
        directory >= 1.3.8 && < 1.4,
        mtl >= 2.3.1 && < 2.4,
        unix >= 2.8.5 && < 2.9,
        filepath-bytestring >= 1.5.2 && < 1.6,
        gitrev >= 1.3.1 && < 1.4,
        process >= 1.6.19 && < 1.7,
        hinotify >= 0.4.2 && < 0.5,
        text >= 2.1.1 && < 2.2,
        megaparsec >= 9.7.0 && < 9.8,
        parser-combinators >= 1.3.0 && < 1.4,
        scientific >= 0.3.8 && < 0.4,
        monad-loops >= 0.4.3 && < 0.5,
        monadlist >= 0.0.2 && < 0.1,
        monadplus >= 1.4.3 && < 1.5,
        optparse-applicative >= 0.19.0 && < 0.20,
        pretty-simple >= 4.1.3 && < 4.2,
        random >= 1.3.1 && < 1.4,
        text-builder >= 1.0.0 && < 1.1,
        text-builder-dev >= 0.4 && < 0.5,
        these >= 1.2.1 && < 1.3

    hs-source-dirs:   app
    default-language: Haskell2010

    GHC-Options: -threaded -Wincomplete-patterns -Wall
